# miniwalk

./: README.md  pyproject.toml
src/miniwalk/: main.py
src/miniwalk/commands/: minisr.py  mod.py  ref.py
